--- a/vignettes/cld.Rmd
+++ b/vignettes/cld.Rmd
@@ -43,6 +43,22 @@ devtools::install_github("ims-fhs/cld", ref = "snf")
 ```
 
 
+```{r, eval = FALSE}
+> devtools::install_github("ims-fhs/cld", ref = "dev")
+Downloading GitHub repo ims-fhs/cld@dev
+These packages have more recent versions available.
+It is recommended to update all of them.
+Which would you like to update?
+
+1: All                         
+2: CRAN packages only          
+3: None                        
+4: glue (1.5.0 -> 1.6.0) [CRAN]
+
+Enter one or more numbers, or an empty line to skip updates: 3
+```
+..don't update the `glue` package. #Dontknowwhy..
+
 # Develop your first narrative
 
 
